exhaust_gns/ACME/two_clusters/acme_fitness_cls1.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping
  labels:
    app: shopping
    service: shopping
spec:
  ports:
    - name: http-shopping
      protocol: TCP
      port: 3000
  selector:
    app: shopping
    service: shopping
---
apiVersion: apps/v1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: shopping
  labels:
    app: shopping
    service: shopping
spec:
  selector:
    matchLabels:
      app: shopping
      service: shopping
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: shopping
        service: shopping
    spec:
      containers:
      - image: gcr.io/vmwarecloudadvocacy/acmeshop-front-end:rel1
        name: shopping
        ports:
        - containerPort: 3000
          name: http-shopping
