exhaust_gns/ACME/two_clusters/cls1_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: acme-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "cc-2ns-cls1-ns.cc-2ns-bookinfo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: acme
spec:
  hosts:
  - "cc-2ns-cls1-ns.cc-2ns-bookinfo.com"
  gateways:
  - acme-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: shopping
        port:
          number: 3000
